deployments/kubernetes/service-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: freightliner
  labels:
    app: freightliner
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
    - port: 2112
      targetPort: 2112
      name: metrics
  selector:
    app: freightliner
